--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -2,13 +2,13 @@
 title: Managing graphs in Apollo Studio
 ---
 
-This article describes Apollo Studio features for all [graph types](./overview/#graph-types). For features specific to supergraphs, see also [Supergraph-specific Studio features](./federated-graphs/).
+This article describes Apollo Studio features for all [graph types](./#graph-types). For features specific to supergraphs, see also [Supergraph-specific Studio features](./federated-graphs/).
 
 ## Creating graphs
 
 **To create a cloud supergraph,** see the [GraphOS quickstart](../quickstart/cloud/).
 
-**To create a _non_-cloud graph** (i.e., a self-hosted supergraph or a monograph), see [this section](./overview/#creating-graphs).
+**To create a _non_-cloud graph** (i.e., a self-hosted supergraph or a monograph), see [this section](./#creating-graphs).
 
 ## Viewing graph details
 
@@ -80,7 +80,7 @@ Apollo Studio provides helpful views for exploring your registered schema:
 
 Apollo Studio provides a powerful **Explorer** IDE that helps you visualize your graph and run queries against it. It's available from your graph's Explorer tab in Studio.
 
-> [Learn about the Explorer.](../explorer/explorer/)
+> [Learn about the Explorer.](../explorer/)
 
 #### The Schema page
 
@@ -253,7 +253,7 @@ The Changelog page in Studio displays a timeline of changes made to your graph's
   width="450"
 />
 
-**Only schema changes that you publish to Studio are included in this timeline**, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../schema/cli-registration/#publishing-with-continuous-delivery).
+**Only schema changes that you publish to Studio are included in this timeline**, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../delivery/#publishing-with-continuous-delivery).
 
 ## Managing access permissions
 
