--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -39,7 +39,7 @@ flowchart LR;
 
 This initial schema fetch is a one-time action to help you get started. Whenever your API's schema _changes_, Studio _doesn't_ automatically fetch it again. This means your router _doesn't know_ about those changes. Clients can't include any new schema fields in their queries until your router _does_ know about the changes!
 
-Whenever you update your subgraph's schema, you need to **publish** those changes with the Rover CLI. [Learn about publishing subgraph schemas.](../schema/cli-registration/#subgraph-schemas)
+Whenever you update your subgraph's schema, you need to **publish** those changes with the Rover CLI. [Learn about publishing subgraph schemas.](../delivery/#subgraph-schemas)
 
 After learning about the publishing process, you should [integrate it into your CI workflow](#set-up-continuous-delivery).
 
@@ -107,7 +107,7 @@ Every time you want to make changes to one of your subgraphs, you should do the 
 1. Verify that your proposed changes won't break your supergraph _or_ any of your existing clients.
    - To do this, you set up [schema checks](../delivery/schema-checks/) for your supergraph.
 2. Whenever you deploy verified changes, always publish your updated subgraph schema to GraphOS as part of that deployment.
-   - For a basic example of this, see [Publishing with continuous delivery](../schema/cli-registration/#publishing-with-continuous-delivery).
+   - For a basic example of this, see [Publishing with continuous delivery](../delivery/#publishing-with-continuous-delivery).
 
 ### Disable client-subgraph communication
 
@@ -138,7 +138,7 @@ For more information, see [Securing your subgraphs](/federation/building-supergr
 
 ### Configure notifications
 
-GraphOS can send you various types of notifications via a few different channels (including Slack and Pagerduty). These notifications can include a daily metrics report, schema change updates, and experimental performance alerts. [Set up notifications.](../notifications/notification-setup/)
+GraphOS can send you various types of notifications via a few different channels (including Slack and Pagerduty). These notifications can include a daily metrics report, schema change updates, and experimental performance alerts. [Set up notifications.](../metrics/notifications/notification-setup/)
 
 ### Invite team members
 
