--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -575,7 +575,7 @@ In theory, we _could_ use the same API key that we just provided to the `rover s
 
     </ExpansionPanel>
 
-    > By providing an API key to the router, you also automatically enable **operation metrics reporting** to GraphOS, enabling you visualize your graph's performance. [Learn more about metrics.](../metrics/usage-reporting/)
+    > By providing an API key to the router, you also automatically enable **operation metrics reporting** to GraphOS, enabling you visualize your graph's performance. [Learn more about metrics.](../metrics/)
 
 4. **Optionally,** to help you keep track of your router's environment variables, consider setting up a tool like [direnv](https://direnv.net/) so you don't need to set the variables every time you run `./router`.
 
