--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -44,7 +44,7 @@ With this supergraph architecture (also known as [Apollo Federation](/federation
 
 ## Initializing your router
 
-Your router is provisioned _automatically_ whenever you create a cloud supergraph in Studio, or whenever you create a new [variant](../graphs/overview/#variants) for an _existing_ cloud supergraph. Each variant has its own distinct router.
+Your router is provisioned _automatically_ whenever you create a cloud supergraph in Studio, or whenever you create a new [variant](../graphs/#variants) for an _existing_ cloud supergraph. Each variant has its own distinct router.
 
 When you first create your variant, the router provisioning process can take a few minutes. If this process hasn't completed yet for a particular variant, an **INITIATING ENDPOINT** label is shown at the top of the variant's page in Studio:
 
