--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -4,7 +4,7 @@ title: Connecting and authenticating with the Explorer
 
 The Explorer automatically attempts to connect to your GraphQL server at the URL specified in its Settings tab.
 
-> When you use the Explorer with a [cloud supergraph](../graphs/overview/#cloud-supergraphs), the endpoint URL is always the URL of your current variant's GraphOS-managed router.
+> When you use the Explorer with a [cloud supergraph](../graphs/#cloud-supergraphs), the endpoint URL is always the URL of your current variant's GraphOS-managed router.
 
 Depending on your GraphQL server's settings, you might need to configure the Explorer's connection to handle CORS requirements or authentication.
 
