--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -12,7 +12,7 @@ You can create **operation collections** in the Apollo Studio Explorer, enabling
   width="300"
 />
 
-Each [variant](../graphs/overview/#variants) of a graph has its own set of operation collections. An operation collection can be either **personal** (visible only to you) or **shared** (visible to all organization members who can view the corresponding variant).
+Each [variant](../graphs/#variants) of a graph has its own set of operation collections. An operation collection can be either **personal** (visible only to you) or **shared** (visible to all organization members who can view the corresponding variant).
 
 **Operation collections help you and your team:**
 
