--- a/src/content/graphos/org/index.mdx
+++ b/src/content/graphos/org/index.mdx
@@ -19,7 +19,7 @@ You can create additional organizations by clicking **Create a new organization*
   width="300"
 />
 
-A single organization can include any number of [graphs](../graphs/overview/), so a single company rarely needs more than one or two organizations.
+A single organization can include any number of [graphs](../graphs/), so a single company rarely needs more than one or two organizations.
 
 ## Viewing your organizations
 
