--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -44,7 +44,7 @@ When **Contributor**s in an organization create a new graph, they are automatica
 | Remove members                                                     |     ✓     |             |                                                                             |                       |          |
 | View and edit billing information                                  |     ✓     |             |                                                                             |                       |          |
 | Manage organization configuration (name, avatar, etc.)             |     ✓     |             |                                                                             |                       |          |
-| Export [audit logs](../audit-log) (enterprise only)                                            |     ✓     |             |                                                                             |                       |          |
+| Export [audit logs](./audit-log) (enterprise only)                                            |     ✓     |             |                                                                             |                       |          |
 | Delete the organization                                            |     ✓     |             |                                                                             |                       |          |
 | Manage which users have access to graphs                           |     ✓     |      ✓      |                                                                             |                       |          |
 | Manage graph integrations (Slack, Datadog, etc.)                   |     ✓     |      ✓      |                                                                             |                       |          |
