--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -71,7 +71,7 @@ with the following input
 }
 ```
 
-To see more examples on how to test these operations, see [`Query._entities`](/federation/subgraphs#query_entities).
+To see more examples on how to test these operations, see [`Query._entities`](/federation/building-supergraphs/subgraphs-overview/#query_entities).
 
 ### End-to-end testing
 
