--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -179,7 +179,7 @@ flowchart LR;
 
 > ⚠️ **We strongly recommend _against_ monographs!** A monograph introduces significant technical _and_ logistical scaling issues as more teams contribute to your graph and its schema.
 >
-> Additionally, the router provides essential GraphOS functionality beyond support for multiple subgraphs: it also enables powerful features like [`@defer` support](/router/executing-operations/defer-support/) and straightforward [metrics reporting](../metrics/usage-reporting/).
+> Additionally, the router provides essential GraphOS functionality beyond support for multiple subgraphs: it also enables powerful features like [`@defer` support](/router/executing-operations/defer-support/) and straightforward [metrics reporting](../metrics/).
 
 ## Creating graphs
 
@@ -242,7 +242,7 @@ flowchart LR;
 
 Your graph has been created, and it appears in the **Classic Graphs** section of your **Graphs** tab.
 
-Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to Apollo Studio](../schema/cli-registration).
+Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to GraphOS](../delivery/).
 
 </ExpansionPanel>
 
@@ -279,7 +279,7 @@ Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. 
 
 Your graph has been created.
 
-Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to Apollo Studio](../schema/cli-registration).
+Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to GraphOS](../delivery/).
 
 </ExpansionPanel>
 
@@ -303,4 +303,4 @@ See [this section](./federated-graphs/#adding-a-variant).
 
 ## Publishing schemas
 
-See [Publishing schemas to GraphOS](../delivery/cli-registration/).
+See [Publishing schemas to GraphOS](../delivery/).
