--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -19,7 +19,7 @@ flowchart LR;
 ```
 
 - **The router** is powered by a particular version of the [Apollo Router](/router/).
-  - This is true for all supergraph types ([cloud](./overview/#cloud-supergraphs) and [self-hosted](./overview/#self-hosted-supergraphs)).
+  - This is true for all supergraph types ([cloud](./#cloud-supergraphs) and [self-hosted](./#self-hosted-supergraphs)).
 - **The GraphOS build pipeline** uses a particular version of Apollo Federation to compose your router's supergraph schema.
   - If you use the [Rover CLI](/rover/) to compose your supergraph schema, this is true for Rover as well. In this case, you effectively maintain your _own_ build pipeline.
 - **Your subgraph schemas** might each use special directives that were first introduced in a particular version of Apollo Federation.
@@ -45,9 +45,9 @@ graph LR;
 
 The method you use to update your router depends on which type of supergraph you have:
 
-- **If you have a [self-hosted supergraph](./overview/#self-hosted-supergraphs),** you [download the latest Apollo Router binary](/router/quickstart#1-download-and-extract-the-apollo-router-binary) in every environment where your router runs.
+- **If you have a [self-hosted supergraph](./#self-hosted-supergraphs),** you [download the latest Apollo Router binary](/router/quickstart#1-download-and-extract-the-apollo-router-binary) in every environment where your router runs.
 
-- **If you have a [serverless cloud supergraph](./overview/#cloud-supergraphs),** GraphOS _automatically_ updates your router to the latest supported version whenever that version changes.
+- **If you have a [serverless cloud supergraph](./#cloud-supergraphs),** GraphOS _automatically_ updates your router to the latest supported version whenever that version changes.
 
   - You can see which Apollo Router version you're running from the **Cloud Router** section of your variant's Settings page in [Studio](https://studio.apollographql.com/):
 
@@ -64,7 +64,7 @@ For details on each Apollo Router version's corresponding Apollo _Federation_ ve
 
 ## 2. Update your build pipeline
 
-Whenever you make an operational change to your graph (such as [publishing changes to a subgraph schema](../schema/cli-registration/#subgraph-schemas)), GraphOS initiates a **build** that composes your graph's new _supergraph_ schema. From [Apollo Studio](https://studio.apollographql.com/), you can configure which version of Apollo Federation the build pipeline uses to perform this composition.
+Whenever you make an operational change to your graph (such as [publishing changes to a subgraph schema](../delivery/#subgraph-schemas)), GraphOS initiates a **build** that composes your graph's new _supergraph_ schema. From [Apollo Studio](https://studio.apollographql.com/), you can configure which version of Apollo Federation the build pipeline uses to perform this composition.
 
 > GraphOS enables you to choose between _minor_ versions of Federation (such as `2.1`). Each option automatically uses the latest supported _patch_ release of that minor version (such as `2.1.4`).
 >
