--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -125,6 +125,6 @@ jobs:
 
 ## Monolith schemas
 
-> ⚠️ These instructions apply only to [monographs](../graphs/overview/#monographs), which are **not recommended**.
+> ⚠️ These instructions apply only to [monographs](../graphs/#monographs), which are **not recommended**.
 
 <RegisterCli />
