--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -33,20 +33,20 @@ GraphOS can perform the following types of schema checks:
 To enable schema checks for your supergraph, do the following if you haven't yet:
 
 1. Make sure you've published all of your subgraph schemas to GraphOS, and that those schemas are up to date.
-    - [Learn how to publish schemas.](../schema/cli-registration/)
+    - [Learn how to publish schemas.](./)
 2. Make sure your supergraph is sending operation metrics to GraphOS. GraphOS uses historical metrics to determine whether a potentially dangerous schema change is safe.
 
     ⚠️ **If GraphOS has no operation metrics to compare against, all potentially dangerous schema changes result in a failed check!**
 
-   - If you have a [cloud supergraph](../graphs/overview/#cloud-supergraphs), your router reports metrics automatically.
+   - If you have a [cloud supergraph](../graphs/#cloud-supergraphs), your router reports metrics automatically.
     - [Setup for other graphs](../metrics/sending-operation-metrics/)
-3. [Install the Rover CLI](/rover/getting-started/) in your development environment and [authenticate it with Apollo Studio](/rover/configuring/#authenticating-with-apollo-studio).
+3. [Install the Rover CLI](/rover/getting-started/) in your development environment and [authenticate it with Apollo Studio](/rover/configuring/#authenticating-with-graphos).
 
 ## Running your first check
 
 Let's say you've made local changes to one of your subgraph schemas. After you [complete the prerequisites](#prerequisites), you can run schema checks against those changes with the `rover subgraph check` command.
 
-> If you have a [monograph](../graphs/overview/#monographs) (not recommended), use [`rover graph`](/rover/commands/graphs/#checking-schema-changes) commands instead of `rover subgraph` commands.
+> If you have a [monograph](../graphs/#monographs) (not recommended), use [`rover graph`](/rover/commands/graphs/#checking-schema-changes) commands instead of `rover subgraph` commands.
 
 The `rover subgraph check` command looks like this:
 
