--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -3,7 +3,7 @@ title: Operation metrics in GraphOS
 description: Understand your supergraph's performance
 ---
 
-If you have a [cloud supergraph](../graphs/overview/#cloud-supergraphs), its router _automatically_ reports metrics for the operations that clients run on it.
+If you have a [cloud supergraph](../graphs/#cloud-supergraphs), its router _automatically_ reports metrics for the operations that clients run on it.
 
 > For other types of graphs, see [Sending operation metrics to GraphOS](./sending-operation-metrics/).
 
