--- a/src/content/graphos/org/account.mdx
+++ b/src/content/graphos/org/account.mdx
@@ -14,7 +14,7 @@ data.
 > Single sign-on (SSO) account management via SAML or OIDC is available for [Enterprise customers](https://www.apollographql.com/pricing/).
 
 Unless another Studio user has invited you to join an existing organization,
-you will also be asked to [create an organization](./organizations/) as part of the signup process.
+you will also be asked to [create an organization](./) as part of the signup process.
 
 ## Personal API keys
 
