--- a/src/content/technotes/TN0037-api-gateways.mdx
+++ b/src/content/technotes/TN0037-api-gateways.mdx
@@ -93,7 +93,7 @@ Subgraph2 --> DB2
 ## When to consider Apollo Router
 If you are running a GraphQL API in production, and you want to be able to:
 
-* [Monitor your GraphQL operations](/graphos/metrics/field-usage) in a way that other telemetry tools don't support while [continuing support for existing APM tools](/TN0015-router-to-apm-via-opentelemetry/)
+* [Monitor your GraphQL operations](/graphos/metrics/field-usage) in a way that other telemetry tools don't support while [continuing support for existing APM tools](./TN0015-router-to-apm-via-opentelemetry/)
 * [Safely publish new schemas without introducing a breaking change](/graphos/delivery/schema-checks)
 * [Secure your GraphQL schema](https://www.apollographql.com/docs/router/configuration/authn-jwt)
 * [Extend the GraphQL runtime with custom features](https://www.apollographql.com/docs/router/customizations/overview)
