--- a/src/content/technotes/TN0038-updating-client-schema.mdx
+++ b/src/content/technotes/TN0038-updating-client-schema.mdx
@@ -7,11 +7,12 @@ tags: [federation, best-practices, client]
 Client apps need to keep their schemas up-to-date whenever changes are made to the supergraph. In order to facilitate this Apollo recommends setting up the following:
 
 - [Schema change notifications](/graphos/metrics/notifications/notification-setup) and ensure messages are sent to the appropriate channels
-- [Apollo Swift](/ios/code-generation/codegen-cli#fetch-schema) and [Apollo Kotlin](/kotlin/advanced/plugin-configuration#downloading-a-schema) build tasks to fetch the latest API schema
-- [`rover graph fetch`](/rover/commands/graphs#graph-fetch) to fetch API schema for any other applications
+- Configure [Apollo Swift](/ios/code-generation/codegen-cli#fetch-schema) and [Apollo Kotlin](/kotlin/advanced/plugin-configuration#downloading-a-schema) build tasks to fetch the latest API schema
+- [`rover graph fetch`](/rover/commands/graphs#graph-fetch) to fetch API schema for any other applications.
+- Configure codgeneration tools for [Swift](/ios/code-generation/codegen-cli), [Kotlin](/kotlin/advanced/response-based-codegen) and [other platforms](https://github.com/dotansimha/graphql-code-generator)
 
-Apollo also recommends setting up your client applications' build pipeline with the following tasks:
+Apollo also recommends setting up your client applications' local and CI build pipeline with the following tasks:
 
 1. Fetch the latest production schema using any of the methods described above, prior to merging any changes to your client code
-1. Run codegen against this schema
-1. The codegen task will validate that any operations used by the client application are compatible with this schema.
+2. Run codegen against this schema
+3. The codegen task will validate that any operations used by the client application are compatible with this schema.
