--- a/src/content/technotes/TN0038-updating-client-schema.mdx
+++ b/src/content/technotes/TN0038-updating-client-schema.mdx
@@ -8,13 +8,11 @@ Client apps need to keep their schemas up-to-date whenever changes are made to t
 
 - [Schema change notifications](/graphos/metrics/notifications/notification-setup) and ensure messages are sent to the appropriate channels
 - Configure [Apollo Swift](/ios/code-generation/codegen-cli#fetch-schema) and [Apollo Kotlin](/kotlin/advanced/plugin-configuration#downloading-a-schema) build tasks to fetch the latest API schema
-- [`rover graph fetch`](/rover/commands/graphs#graph-fetch) to fetch API schema for any other applications.
+- [`rover graph fetch`](/rover/commands/graphs#graph-fetch) to fetch the API schema for any other applications.
 - Configure codgeneration tools for [Swift](/ios/code-generation/codegen-cli), [Kotlin](/kotlin/advanced/response-based-codegen) and [other platforms](https://github.com/dotansimha/graphql-code-generator)
 
-Apollo also recommends setting up your client applications' local and CI build pipeline with the following tasks:
+To ensure that your client operations are valid against the most recent schema, we recommend re-running code generation in your continuous integration system before merging client changes. The specific steps required are as follows:
 
 1. Fetch the latest production schema using any of the methods described above, prior to merging any changes to your client code
 2. Run codegen against this schema
 3. The codegen task will validate that any operations used by the client application are compatible with this schema.
-
-To ensure that your client operations are valid against the most recent schema, we recommend re-running code generation in your continuous integration system before merging client changes.
