--- a/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
+++ b/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
@@ -1,6 +1,6 @@
 ---
 title: Debugging subgraph requests from Apollo Router or Gateway
-id: TN0038
+id: TN0039
 tags: [federation, gateway, router]
 ---
 
@@ -26,6 +26,14 @@ The above uses an inline closure within the `map_request` function of the `subgr
 
 To enable query plans, you will need to run the Apollo Router with the `--dev` flag and leverage [Apollo Sandbox](https://studio.apollographql.com/sandbox) to [display your query plans](/graphos/explorer/additional-features/#query-plans-for-supergraphs). 
 
+As an alternative to using `--dev`, you can also enable query plans via the below configuration option, however we **strongly** discourage this as the feature may be removed or renamed at any time in the future.  
+
+```yaml
+plugins:
+  experimental.expose_query_plan: true
+```
+
+
 ## Apollo Gateway 
 
 To debug queries to your subgraphs within an Apollo Gateway instance, we'll leverage a [`buildService` function](/apollo-server/using-federation/api/apollo-gateway/#configuring-the-subgraph-fetcher) to log the operation name and body. 
@@ -50,4 +58,4 @@ const gateway = new ApolloGateway({
 
 The above snippet will create a new class called `DebugDataSource` to log out the operation name and body using the `willSendRequest` hook which is called prior to execution. 
 
-Lastly, it also enables the `debug` setting on the Gateway configuration to print out query plans in the logs for further debugging (if needed).
+Lastly, it also enables the `debug` setting on the Gateway configuration to print out query plans in the logs for further debugging if needed.
